vlib/v/checker/tests/map_with_none_err.out
vlib/v/checker/tests/map_with_none_err.vv:2:6: warning: unused variable: `a`
    1 | fn main() {
    2 |     mut a := {
      |         ^
    3 |         'bar': none
    4 |     }
vlib/v/checker/tests/map_with_none_err.vv:6:6: warning: unused variable: `b`
    4 |     }
    5 | 
    6 |     mut b := {
      |         ^
    7 |         'foo': 1
    8 |         'bar': none
vlib/v/checker/tests/map_with_none_err.vv:11:6: warning: unused variable: `c`
    9 |     }
   10 | 
   11 |     mut c := {
      |         ^
   12 |         'foo': ?int(none)
   13 |         'bar': none
vlib/v/checker/tests/map_with_none_err.vv:3:10: error: map value cannot be only `none`
    1 | fn main() {
    2 |     mut a := {
    3 |         'bar': none
      |                ~~~~
    4 |     }
    5 |
vlib/v/checker/tests/map_with_none_err.vv:8:10: error: invalid map value: expected `int`, not `none`
    6 |     mut b := {
    7 |         'foo': 1
    8 |         'bar': none
      |                ~~~~
    9 |     }
   10 |
