vlib/v/checker/tests/map_with_none_err.vv
fn main() {
	mut a := {
		'bar': none
	}

	mut b := {
		'foo': 1
		'bar': none
	}

	mut c := {
		'foo': ?int(none)
		'bar': none
	}
}
